--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <li>Nitro</li>
         <li>Sicurezza</li>
         <li>Assistenza</li>
+        <li id="button">
         <a href="#">Accedi</a>
+        </li>
     </ul>
 
 <!-- descrizione discord -->
@@ -28,7 +30,7 @@
         <h2>Il tuo posto per parlare</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam minus corrupti consequatur debitis deserunt a ipsa suscipit, nihil labore perferendis id atque rem quia et quaerat unde? Similique, labore rerum.</p>
         <a href="#">Scarica</a>
-        <a href="#">Apri</a>
+        <a id="browser" href="#">Apri</a>
 
     </div>
 
