--- a/index.html
+++ b/index.html
@@ -12,30 +12,38 @@
 <body>
 
 <header>
-<!-- lista menu -->
+<!-- menu -->
 <nav>
+    <!-- Logo -->
+    <div id="logo" ><img src="" alt="">hbuyvuyy</div>
+
+    <!-- lista navigazione -->
     <ul>
         <li>Scarica</li>
         <li>Perchè</li>
         <li>Nitro</li>
         <li>Sicurezza</li>
-        <li>Assistenza</li>
-        <li id="button">
-        <a href="#">Accedi</a>
-        </li>
+        <li>Assistenza</li>        
+    </li>
     </ul>
 
+    <div id="accedi" ><a href="#">Accedi</a></div>
+</nav>
+
 <!-- descrizione discord -->
-    <div>
-        <h2>Il tuo posto per parlare</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam minus corrupti consequatur debitis deserunt a ipsa suscipit, nihil labore perferendis id atque rem quia et quaerat unde? Similique, labore rerum.</p>
-        <a href="#">Scarica</a>
-        <a id="browser" href="#">Apri</a>
+    <div id="descrizione">
+        <section>
+                <h2>Il tuo posto per parlare</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam minus corrupti consequatur debitis deserunt a ipsa suscipit, nihil labore perferendis id atque rem quia et quaerat unde? Similique, labore rerum.</p>
+            <section id="link" >
+                <a href="#">Scarica</a>
+                <a id="browser" href="#">Apri Discord</a>
+            </section>
+        </section>
 
     </div>
 
 
-</nav>
 
 </header>
 
