--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </li>
     </ul>
 
+    <!-- bottone accedi -->
     <div id="accedi" ><a href="#">Accedi</a></div>
 </nav>
 
@@ -40,14 +41,53 @@
                 <a id="browser" href="#">Apri Discord</a>
             </section>
         </section>
-
     </div>
-
-
-
 </header>
 
 <main>
+    <!-- prima sezione -->
+<div>
+    <section class="main" >
+        <div><img src="" alt="">immagine</div>
+        <div>
+            <h2>Titolo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
+        </div>
+    </section>
+</div>
+
+<!-- seconda sezione -->
+<div>
+    <section class="main" >
+        <div><img src="" alt="">immagine</div>
+        <div>
+            <h2>Titolo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
+        </div>
+    </section>
+</div>
+
+<!-- terza sezione -->
+<div>
+    <section class="main" >
+        <div><img src="" alt="">immagine</div>
+        <div>
+            <h2>Titolo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
+        </div>
+    </section>
+</div>
+
+<!-- quarta sezione -->
+<div>
+    <section class="main" >
+        <div><img src="" alt="">immagine</div>
+        <div>
+            <h2>Titolo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
+        </div>
+    </section>
+</div>
 
 
 
