--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section>
                 <h2>Il tuo posto per parlare</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam minus corrupti consequatur debitis deserunt a ipsa suscipit, nihil labore perferendis id atque rem quia et quaerat unde? Similique, labore rerum.</p>
-            <section id="link" >
+            <section class="link" >
                 <a href="#">Scarica</a>
                 <a id="browser" href="#">Apri Discord</a>
             </section>
@@ -46,51 +46,59 @@
 
 <main>
     <!-- prima sezione -->
-<div>
-    <section class="main" >
-        <div><img src="" alt="">immagine</div>
-        <div>
-            <h2>Titolo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
-        </div>
-    </section>
-</div>
+    <div>
+        <section class="main" >
+            <div><img src="" alt="">immagine</div>
+            <div>
+                <h2>Titolo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
+            </div>
+        </section>
+    </div>
 
-<!-- seconda sezione -->
-<div>
-    <section class="main" >
-        <div><img src="" alt="">immagine</div>
-        <div>
-            <h2>Titolo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
-        </div>
-    </section>
-</div>
+    <!-- seconda sezione -->
+    <div>
+        <section class="main" >
+            <div><img src="" alt="">immagine</div>
+            <div>
+                <h2>Titolo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
+            </div>
+        </section>
+    </div>
 
-<!-- terza sezione -->
-<div>
-    <section class="main" >
-        <div><img src="" alt="">immagine</div>
-        <div>
-            <h2>Titolo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
-        </div>
-    </section>
-</div>
+    <!-- terza sezione -->
+    <div>
+        <section class="main" >
+            <div><img src="" alt="">immagine</div>
+            <div>
+                <h2>Titolo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
+            </div>
+        </section>
+    </div>
 
-<!-- quarta sezione -->
-<div>
-    <section class="main" >
-        <div><img src="" alt="">immagine</div>
-        <div>
-            <h2>Titolo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
-        </div>
-    </section>
-</div>
+    <!-- quarta sezione -->
+    <div>
+        <section class="main" >
+            <div><img src="" alt="">immagine</div>
+            <div>
+                <h2>Titolo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
+            </div>
+        </section>
 
-
-
+    </div>
+        <!-- quinta sezione -->
+    <div>
+        <!-- <section id="ready" > -->
+        <section id="adventure"
+            <h3> Pronto ad iniziare la tua avventura? </h3>
+            <div>
+                <a class="link" href="">Button</a>
+            </div>
+        </section>
+    </div>
 </main>
 
 
