--- a/index.html
+++ b/index.html
@@ -104,6 +104,30 @@
 
 
 <footer>
+    <!-- prima sezione -->
+    <section>
+        <div></div>
+    </section>
+
+    <!-- seconda sezione -->
+    <section>
+        <div></div>
+    </section>
+
+    <!-- terza sezione -->
+    <section>
+        <div></div>
+    </section>
+
+    <!-- quarta sezione -->
+    <section>
+        <div></div>
+    </section>
+
+    <!-- quinta sezione -->
+    <section>
+        <div></div>
+    </section>
 
 </footer>
     
