--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="logo" ><img src="" alt="">hbuyvuyy</div>
 
     <!-- lista navigazione -->
-    <ul>
+    <ul id="list-nav">
         <li>Scarica</li>
         <li>Perchè</li>
         <li>Nitro</li>
@@ -104,30 +104,72 @@
 
 
 <footer>
-    <!-- prima sezione -->
-    <section>
-        <div></div>
-    </section>
 
-    <!-- seconda sezione -->
-    <section>
-        <div></div>
-    </section>
+    <!-- footer top -->
+    <div id="footer-top">
+        <!-- prima sezione -->
+        <section id="lingue">
+            <h3>posto per parlare</h3>
+            <img src="" alt="lingue">
+            <img src="" alt="social">
+        </section>
 
-    <!-- terza sezione -->
-    <section>
-        <div></div>
-    </section>
+        <!-- seconda sezione -->
+        <section class="footer-menu">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
 
-    <!-- quarta sezione -->
-    <section>
-        <div></div>
-    </section>
+        <!-- terza sezione -->
+        <section class="footer-menu">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>  
+        </section>
 
-    <!-- quinta sezione -->
-    <section>
-        <div></div>
-    </section>
+        <!-- quarta sezione -->
+        <section class="footer-menu">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+
+        <!-- quinta sezione -->
+        <section class="footer-menu">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+    </div>
+
+    <!-- footer bottom -->
+
+    <div id="footer-bottom" >
+
+
+    </div>
+
+
 
 </footer>
     
