--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- menu -->
 <nav>
     <!-- Logo -->
-    <div id="logo" ><img src="" alt="">hbuyvuyy</div>
+    <div id="logo"><img src="" alt="">hbuyvuyy</div>
 
     <!-- lista navigazione -->
     <ul id="list-nav">
@@ -59,11 +59,11 @@
     <!-- seconda sezione -->
     <div>
         <section class="main" >
-            <div><img src="" alt="">immagine</div>
             <div>
                 <h2>Titolo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
             </div>
+            <div><img src="" alt="">immagine</div>
         </section>
     </div>
 
@@ -80,42 +80,39 @@
 
     <!-- quarta sezione -->
     <div>
-        <section class="main" >
-            <div><img src="" alt="">immagine</div>
+        <section class="adventure" >
             <div>
                 <h2>Titolo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure repellendus autem voluptas perferendis, delectus distinctio illum ratione, similique omnis possimus magni quia aut culpa iusto reiciendis quam provident soluta.</p>
             </div>
+            <div><img src="" alt="">immagine</div>
         </section>
 
     </div>
+
         <!-- quinta sezione -->
     <div>
-        <!-- <section id="ready" > -->
-        <section id="adventure"
-            <h3> Pronto ad iniziare la tua avventura? </h3>
-            <div>
-                <a class="link" href="">Button</a>
-            </div>
+        <section id="adventure">
+            <h3>Pronto ad iniziare la tua avventu?</h3>
+            <a href="">Scarica</a>
         </section>
     </div>
+    
 </main>
 
 
-
+<!-- footer top -->
+<!-- prima sezione -->
 <footer>
-
-    <!-- footer top -->
-    <div id="footer-top">
-        <!-- prima sezione -->
-        <section id="lingue">
+    <div id="footer-top" >
+        <div id="lingue">
             <h3>posto per parlare</h3>
             <img src="" alt="lingue">
             <img src="" alt="social">
-        </section>
+        </div>
 
         <!-- seconda sezione -->
-        <section class="footer-menu">
+        <div class="footer-menu">
             <ul>
                 <li></li>
                 <li></li>
@@ -123,10 +120,10 @@
                 <li></li>
                 <li></li>
             </ul>
-        </section>
+        </div>
 
         <!-- terza sezione -->
-        <section class="footer-menu">
+        <div class="footer-menu">
             <ul>
                 <li></li>
                 <li></li>
@@ -134,10 +131,10 @@
                 <li></li>
                 <li></li>
             </ul>  
-        </section>
+        </div>
 
         <!-- quarta sezione -->
-        <section class="footer-menu">
+        <div class="footer-menu">
             <ul>
                 <li></li>
                 <li></li>
@@ -145,10 +142,10 @@
                 <li></li>
                 <li></li>
             </ul>
-        </section>
+        </div>
 
         <!-- quinta sezione -->
-        <section class="footer-menu">
+        <div class="footer-menu">
             <ul>
                 <li></li>
                 <li></li>
@@ -159,18 +156,13 @@
                 <li></li>
                 <li></li>
             </ul>
-        </section>
+        </div>
     </div>
+
 
     <!-- footer bottom -->
-
     <div id="footer-bottom" >
-
-
     </div>
-
-
-
 </footer>
     
 </body>
